--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>北海道のグルメ　全域編</title>
         <meta name="description" content="北海道の全域・札幌・函館・旭川・小樽のグルメをご紹介します">
-        <link rel="icon" type="image/png" href="images/favicon.png">
+        <link rel="icon" type="image/png" href="https://kunren202210.github.io/kunren2022/images/favicon.png">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
